@@ -1,3 +1,9 @@
+2019-11-02 Erik Petrich <epetrich AT ivorytower.norman.ok.us>
+
+	* support/sdbinutils/binutils/Makefile.am,
+	  support/sdbinutils/binutils/Makefile.in: prefer static linked libz
+	  for the Windows snapshot builds so that we don't need another DLL
+
 2019-11-01 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>
 
 	* src/SDCCsymt.c,
